--- a/proyecto_final/frontend/components/navbar.html
+++ b/proyecto_final/frontend/components/navbar.html
@@ -1,18 +1,27 @@
-<!-- NavBar -->
-<div class="bg-gradient-to-r from-rose-400 to-purple-700 pb-1">
-    <nav class="bg-black">
-        <div class="mx-auto px-4 flex justify-between items-center h-16">
-            <a href="index.html">
-                <img src="../assets/images/home.svg" alt="home icon" class="max-h-10">
-            </a>
-            <div class="flex space-x-6">
-                <a href="reservation.html" class="text-white hover:text-pink-500">Reservas</a>
-                <a href="catalog.html" class="text-white hover:text-pink-500">Catálogo</a>
-                <a href="login.html" class="text-white hover:text-pink-500">Iniciar Sesión</a>
-                <a href="signup.html" class="text-white bg-gradient-to-l from-purple-700 to-rose-400 px-4 py-2 rounded hover:scale-105 transition-colors duration-300">Regístrate</a>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Super Autos Medellín - Inicio</title>
+    <link href="../assets/css/styles.css" rel="stylesheet">
+    <link rel="icon" href="../assets/images/favicon.png" type="image/png">
+</head>
+<body><!-- NavBar -->
+    <div class="bg-gradient-to-r from-rose-400 to-purple-700 pb-1">
+        <nav class="bg-black">
+            <div class="mx-auto px-4 flex justify-between items-center h-16">
+                <a href="index.html">
+                    <img src="../assets/images/home.svg" alt="home icon" class="max-h-10">
+                </a>
+                <div class="flex space-x-6">
+                    <a href="reservation.html" class="text-white hover:text-pink-500">Reservas</a>
+                    <a href="catalog.html" class="text-white hover:text-pink-500">Catálogo</a>
+                    <a href="login.html" class="text-white hover:text-pink-500">Iniciar Sesión</a>
+                    <a href="signup.html" class="text-white bg-gradient-to-l from-purple-700 to-rose-400 px-4 py-2 rounded hover:scale-105 transition-colors duration-300">Regístrate</a>
+                </div>
             </div>
-        </div>
-    </nav>
-    
-</div>
-
+        </nav>
+        
+    </div>
+    </body>
